# rustapi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  diesel.toml  openapi.yaml  rustfmt.toml  test.sh
.github/workflows/: ci.yml  test.yml
config/: default.json  development.json  production.json  staging.json  test.json
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/entities/: cat.rs  mod.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240527_080925_create_users_table.rs  m20240530_082146_create_cats_table.rs  main.rs
migrations/2019-11-12-023907_create_posts/: up.sql
migrations/2024-07-14-055806_create_users/: up.sql
migrations/2024-07-14-134620_create_cats/: down.sql  up.sql
src/: app.rs  context.rs  database.rs  errors.rs  logger.rs  main.rs  schema.rs  server.rs  settings.rs
src/components/posts/: mod.rs  model.rs  route.rs
src/lib/: authenticate_request.rs  custom_response.rs  date.rs  mod.rs  models.rs  pagination.rs  request_query.rs  serde.rs  to_object_id.rs  token.rs
src/models/: cat.rs  mod.rs  user.rs
src/routes/: cat.rs  mod.rs  status.rs  user.rs
src/tests/: mod.rs  setup.rs  utils.rs
src/tests/routes/: cat.rs  mod.rs  status.rs  user.rs
src/utils/: authenticate_request.rs  custom_response.rs  date.rs  entity.rs  mod.rs  models.rs  pagination.rs  to_object_id.rs  token.rs
