[package]
name = "rustapi"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2021"

[dependencies]
config = "0.14.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_derive = "1.0.152"
# Wait for wither to relase a new version.
# https://github.com/thedodd/wither/pull/89#issuecomment-1023644443
wither = { git = "https://github.com/thedodd/wither", rev = "52fd503" }
futures = "0.3.30"
thiserror = "1.0.57"
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.4.4", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
http = "0.2.9"
chrono = "0.4.33"
async-trait = "0.1.77"
# Investigate if wither::bson can be used instead and activate this feature.
bson = { version = "2.9.0", features = ["serde_with", "chrono-0_4"] }
jsonwebtoken = "8.3.0"
once_cell = "1.19.0"
bcrypt = "0.15.0"
validator = { version = "0.16.1", features = ["derive"] }
lazy_static = "1.4.0"
mime = "0.3.17"
bytes = "1.5.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
reqwest = { version = "0.11.24", features = ["json"] }
pretty_assertions = "1.4.0"
