[package]
name = "rustapi"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2021"

[dependencies]
config = "0.14.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.124"
serde_derive = "1.0.152"
# Wait for wither to relase a new version.
# https://github.com/thedodd/wither/pull/89#issuecomment-1023644443
wither = { git = "https://github.com/thedodd/wither", rev = "52fd503" }
futures = "0.3.30"
thiserror = "1.0.63"
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.39.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.4.4", features = [
  "trace",
  "compression-br",
  "propagate-header",
  "sensitive-headers",
  "cors",
] }
chrono = "0.4.38"
async-trait = "0.1.81"
# Investigate if wither::bson can be used instead and activate this feature.
bson = { version = "2.10.0", features = ["serde_with", "chrono-0_4"] }
jsonwebtoken = "8.3.0"
once_cell = "1.19.0"
bcrypt = "0.15.1"
validator = { version = "0.18.1", features = ["derive"] }
mime = "0.3.17"
bytes = "1.6.1"

[dev-dependencies]
assert-json-diff = "2.0.2"
reqwest = { version = "0.12.4", features = ["json"] }
pretty_assertions = "1.4.0"
