[package]
name = "rustapi"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2021"

[[bin]]
name ="rustapi"
path ="./src/main.rs"

[dependencies]
async-trait = "0.1.81"
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bcrypt = "0.15.1"
# Investigate if wither::bson can be used instead and activate this feature.
bson = { version = "2.10.0", features = ["serde_with", "chrono-0_4"] }
bytes = "1.7.2"
chrono = "0.4.38"
config = "0.14.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
mime = "0.3.17"
once_cell = "1.20.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.120"
thiserror = "1.0.63"
tokio = { version = "1.39.1", features = ["full"] }
tower-http = { version = "0.6", features = [
  "trace",
  "compression-br",
  "propagate-header",
  "sensitive-headers",
  "cors",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = { version = "0.18.1", features = ["derive"] }
# Wait for wither to relase a new version.
# https://github.com/thedodd/wither/pull/89#issuecomment-1023644443
wither = { git = "https://github.com/thedodd/wither", rev = "52fd503" }

[dev-dependencies]
assert-json-diff = "2.0.2"
pretty_assertions = "1.4.1"
reqwest = { version = "0.12.4", features = ["json"] }
